# Deteksi-katarak-menggunakan-pemrosesan-gambar

./: CataractDetectionHistogram.py  DegreeOfCataract.py  README.md  main.py  pyproject.toml
utils/: __init__.py  clear_ui_elements.py  create_error_label.py  load_image.py  resize_image.py  select_image_file.py
